# django-rls-tenants

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  pr-policy.yml  publish-testpypi.yml  publish.yml
django_rls_tenants/: __init__.py  apps.py  exceptions.py  operations.py
django_rls_tenants/contrib/: __init__.py  celery.py
django_rls_tenants/management/: __init__.py
django_rls_tenants/management/commands/: __init__.py  check_rls.py  setup_m2m_rls.py
django_rls_tenants/rls/: __init__.py  constraints.py  context.py  guc.py  policy_sql.py
django_rls_tenants/tenants/: __init__.py  admin.py  bypass.py  checks.py  conf.py  context.py  errors.py  managers.py  middleware.py  models.py  sql.py  state.py  testing.py  types.py
docs/: architecture.md  comparison.md  configuration.md  development.md  index.md  why-rls.md
docs/advanced/: architecture.md  migration-guide.md  security.md
docs/development/: contributing.md  roadmap.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: admin.md  bypass-mode.md  celery-tasks.md  connection-pooling.md  context-managers.md  management-commands.md  middleware.md  protecting-models.md  raw-sql.md  tenant-model.md  testing.md  user-integration.md
docs/reference/: api.md
example/: .env.example  Dockerfile  README.md  docker-compose.yml  manage.py  pytest.ini
example/accounts/: admin.py  models.py
example/demo/: settings.py  urls.py
example/docker/: init-db.sql
example/notes/: admin.py  models.py  services.py  urls.py  views.py
example/notes/management/commands/: seed_demo.py
example/notes/templates/notes/: base.html  note_form.html  note_list.html  note_stats.html
example/notes/templates/registration/: login.html
example/tenants/: admin.py  models.py
example/tests/: conftest.py  test_rls.py
tests/: admin_urls.py  conftest.py  settings.py  test_debug_logging.py  test_exceptions.py  test_layering.py  test_type_annotations.py
tests/test_app/: __init__.py  admin.py  models.py
tests/test_app/migrations/: 0001_initial.py  0002_add_order_item.py  0003_ordernote.py  0004_tag_selfrefmodel_project.py  0005_m2m_rls_policies.py
tests/test_contrib/: test_celery.py
tests/test_integration/: conftest.py  test_end_to_end.py  test_m2m_isolation.py  test_setup_m2m_rls.py  test_sql_helpers.py
tests/test_rls/: test_constraints.py  test_context.py  test_guc.py  test_m2m_autodetect.py  test_m2m_operations.py  test_policy_sql.py
tests/test_tenants/: test_admin.py  test_apps.py  test_bypass.py  test_checks.py  test_concurrency.py  test_conf.py  test_context.py  test_managers.py  test_middleware.py  test_models.py  test_sql.py  test_state.py  test_testing.py
